--- a/index.html
+++ b/index.html
@@ -34,36 +34,33 @@
   <!-- Header -->
   <header class="header_section fixed-top">
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg custom_nav-container">
-        <a class="navbar-brand" href="#hero">
+      <nav class="navbar navbar-expand-lg custom_nav-container" role="navigation" aria-label="Primary Navigation">
+        <a class="navbar-brand" href="#hero" aria-label="QAExplainer Home">
           <span>QAExplainer</span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" aria-haspopup="true" aria-pressed="false" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" role="navigation">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#hero">Home</a>
+              <a class="nav-link" href="#hero" tabindex="0">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about" tabindex="0">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills</a>
+              <a class="nav-link" href="#skills" tabindex="0">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#youtube">YouTube</a>
+              <a class="nav-link" href="#youtube" tabindex="0">YouTube</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#projects" tabindex="0">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#reviews">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact" tabindex="0">Contact</a>
             </li>
           </ul>
         </div>
@@ -272,42 +269,7 @@
   </section>
 
   <!-- Client Reviews Section -->
-  <section id="reviews" class="reviews_section py-5 bg-light">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8 text-center mb-4">
-          <h2 class="section-title">Client Reviews</h2>
-          <p class="text-muted">What clients say about my work</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="review-card card h-100 shadow-sm text-center p-4 hover-card">
-            <img src="https://via.placeholder.com/80x80?text=JD" alt="John Doe" class="rounded-circle mx-auto mb-3" width="80">
-            <h5>John Doe</h5>
-            <p class="text-muted">Software Manager</p>
-            <p>"QAExplainer helped us automate 90% of test cases! Exceptional expertise in Selenium and Rest Assured."</p>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="review-card card h-100 shadow-sm text-center p-4 hover-card">
-            <img src="https://via.placeholder.com/80x80?text=JS" alt="Jane Smith" class="rounded-circle mx-auto mb-3" width="80">
-            <h5>Jane Smith</h5>
-            <p class="text-muted">DevOps Lead</p>
-            <p>"Extremely professional and detail-oriented QA expert. Playwright implementation was seamless."</p>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="review-card card h-100 shadow-sm text-center p-4 hover-card">
-            <img src="https://via.placeholder.com/80x80?text=MB" alt="Mike Brown" class="rounded-circle mx-auto mb-3" width="80">
-            <h5>Mike Brown</h5>
-            <p class="text-muted">Product Owner</p>
-            <p>"Delivered high-quality API frameworks with JMeter performance insights. Highly recommended!"</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <!-- Removed client reviews section as per user request -->
 
   <!-- Contact Section -->
   <section id="contact" class="contact_section py-5">
@@ -341,10 +303,10 @@
   <footer class="footer_section py-4 bg-dark text-white">
     <div class="container text-center">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <p>&copy; 2025 QAExplainer | All Rights Reserved</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="social-icons">
             <a href="https://www.youtube.com/@QAExplainer" class="text-white mx-2" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
             <a href="https://github.com/ByteCodeTechnica" class="text-white mx-2" target="_blank"><i class="fab fa-github fa-2x"></i></a>
