--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <title>QAExplainer - SDET | QA Engineer | Automation Enthusiast</title>
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- bootstrap core css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -309,7 +309,7 @@
         <div class="col-md-4">
           <div class="social-icons">
             <a href="https://www.youtube.com/@QAExplainer" class="text-white mx-2" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
-            <a href="https://github.com/ByteCodeTechnica" class="text-white mx-2" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/ByteCodeTechnical" class="text-white mx-2" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="#" class="text-white mx-2"><i class="fab fa-linkedin fa-2x"></i></a>
           </div>
         </div>
